input icon align fix

--- a/src/components/Input/Input.st.css
+++ b/src/components/Input/Input.st.css
@@ -12,6 +12,10 @@
 		rightAlign;
 }
 
+.icon:leftAlign {
+	order: -1;
+}
+
 .input {
 	display: block;
 	width: 100%;
